--- a/Styles/AddressBook.css
+++ b/Styles/AddressBook.css
@@ -36,3 +36,39 @@ body{
 *{
     box-sizing: border-box;
 }
+.table-main{
+    width: 80%;
+    margin: 0 auto;
+    overflow: auto;
+}
+.table{
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 16px;
+    min-width: 800px;
+}
+td, th{
+    text-align: left;
+    padding: 5px 8px;
+}
+th{
+    background: #008CFF 0% 0% no-repeat padding-box;
+    border-radius: 3px 3px 0px 0px;
+    text-align: center;
+    font: normal normal normal 28px/37px Roboto;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    border: 0px solid #dddddd;
+    top: 173px;
+    left: 427px;
+    width: 1067px;
+    height: 108px;
+    opacity: 1;
+}
+.header-logo{
+    top: 214px;
+    left: 1393px;
+    width: 44px;
+    height: 44px;
+}
