Added: Remaining feild has been added

--- a/Styles/AddressBook.css
+++ b/Styles/AddressBook.css
@@ -1,16 +1,21 @@
+html, input{
+    font-family: sans-serif;
+}
 body{
-    margin: 0;
-    height: 100%;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0px auto;
+    padding: 2em;
 }
 .header{
-    padding: 15px 0;
+    padding: 25px 0;
     background-color: #ffffff;
 }
 .header-content{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: last baseline;
+    align-items: left;
     border: 0px solid green;
 }
 .logo-content{
@@ -18,7 +23,7 @@ body{
     flex-direction: row;
     align-items: center;
     border: 0px solid green;
-    width: 80%;
+    width: 0%;
 }
 .logo-content-img{
     border: solid 0px #42515f;
@@ -36,64 +41,49 @@ body{
 *{
     box-sizing: border-box;
 }
-.table-main{
-    width: 80%;
-    margin: 0 auto;
-    overflow: auto;
+
+.headerContainer{
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    background-color: #008CFF;
+    color: #ffffff;
+    font-weight: normal;
+    margin-bottom: 20px;
 }
-.table{
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0 16px;
-    min-width: 800px;
+form{
+    margin-top: 50px;
 }
-td, th{
-    text-align: left;
-    padding: 5px 8px;
-}
-th{
-    background: #008CFF 0% 0% no-repeat padding-box;
-    border-radius: 3px 3px 0px 0px;
-    text-align: center;
-    font: normal normal normal 28px/37px Roboto;
+.form-head{
+    font: normal normal normal 24px/37px Roboto;
     letter-spacing: 0px;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    border: 0px solid #dddddd;
-    top: 173px;
-    left: 427px;
-    width: 1067px;
-    height: 108px;
+    color: #ffffff;
+    text-transform: capitalize;
     opacity: 1;
+    padding-bottom: 0px;
 }
-.header-logo{
-    top: 214px;
-    left: 1393px;
-    width: 44px;
-    height: 44px;
-    cursor: pointer;
+div{
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+label, input, button{
+    font-size: 16px;
+    line-height: 1.5;
+}
+label{
+    text-align: left;
+    width: 30%;
+    margin-right: 2%;
 }
 .input1{
+    flex: auto;
     top: 370px;
     left: 554px;
     width: 808px;
     height: 50px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #BDBDBD;
-    border-radius: 3px;
-    opacity: 1;
 }
-.input2{
-    top: 580px;
-    left: 554px;
-    width: 808px;
-    height: 104px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #BDBDBD;
-    border-radius: 3px;
-    opacity: 1;
-}
-
 select{
     padding: 12px;
     border: 1px solid #ccc;
@@ -107,7 +97,7 @@ select{
     height: 50px;
 }
 
-.input4{
+.input2{
     top: 735px;
     left: 1112px;
     width: 250px;
@@ -116,6 +106,15 @@ select{
     border: 1px solid #BDBDBD;
     border-radius: 3px;
     opacity: 1;
+}
+button{
+    width: 70%;
+    margin: 0 auto;
+}
+error-output{
+    font-size: 12px;
+    font-style: italic;
+    color: red;
 }
 
 .button{
