--- a/Styles/AddressBook.css
+++ b/Styles/AddressBook.css
@@ -116,7 +116,12 @@ error-output{
     font-style: italic;
     color: red;
 }
-
+.buttonParent{
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 20px;
+}
 .button{
     font-size: 20px;
     font-family: Roboto;
