--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -72,3 +72,28 @@ body{
     cursor: pointer;
     text-decoration: none;
 }
+.table-main{
+    width: 80%;
+    margin: 0 auto;
+    overflow: auto;
+}
+.table{
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 16px;
+    min-width: 800px;
+}
+td, th{
+    text-align: left;
+    padding: 5px 8px;
+}
+th{
+    background: transparent 0% 0% no-repeat padding-box;
+    border-radius: 3px 3px 0px 0px;
+    text-align: left;
+    font: normal normal medium 18px/24px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    text-transform: uppercase;
+    border: 0px solid #dddddd;
+}
